<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wukker.sb.eventconnectionfortopmobile.Quest2Activity"
    android:background="@color/grey">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonbackq2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goon"
        android:id="@+id/buttonforwardq2"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView6"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step1"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pleaseShare"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:singleLine="false"
        android:layout_toStartOf="@+id/buttonforwardq2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conferenceHall"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conferenceHall"
        style="@style/CustomRatingBar"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationprocess"
        android:id="@+id/textView9"
        android:layout_below="@+id/conferenceHall"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrationprocess"
        style="@style/CustomRatingBar"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/organizationalexellence"
        android:id="@+id/textView10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/organizationalExellence"
        style="@style/CustomRatingBar"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/actuality"
        android:id="@+id/textView11"
        android:layout_below="@+id/organizationalExellence"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actuality"
        style="@style/CustomRatingBar"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
