<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wukker.sb.eventconnectionfortopmobile.VisitorRegActivity"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/сontinue"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondname"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignEnd="@+id/textView3"
        android:hint="@string/middlename" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView4"
        android:hint="@string/company" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goon"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText"
        android:textColor="@color/mustard"
        android:onClick="onClick"
        android:nestedScrollingEnabled="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerparticipant"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

</RelativeLayout>
